@@ -19,34 +19,35 @@ package org.apache.maven.continuum.web.action.admin;
  * under the License.
  */
 
-import java.io.File;
-
-import javax.servlet.http.HttpServletRequest;
-
+import com.opensymphony.xwork2.Preparable;
 import org.apache.continuum.configuration.ContinuumConfigurationException;
 import org.apache.maven.continuum.configuration.ConfigurationService;
 import org.apache.maven.continuum.configuration.ConfigurationStoringException;
 import org.apache.maven.continuum.security.ContinuumRoleConstants;
-import org.apache.maven.continuum.store.ContinuumStoreException;
 import org.apache.maven.continuum.web.action.ContinuumActionSupport;
 import org.apache.struts2.ServletActionContext;
+import org.codehaus.plexus.component.annotations.Component;
 import org.codehaus.plexus.redback.rbac.Resource;
 import org.codehaus.plexus.util.StringUtils;
 import org.codehaus.redback.integration.interceptor.SecureAction;
 import org.codehaus.redback.integration.interceptor.SecureActionBundle;
 import org.codehaus.redback.integration.interceptor.SecureActionException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import com.opensymphony.xwork2.Preparable;
+import java.io.File;
+import javax.servlet.http.HttpServletRequest;
 
 /**
  * @author <a href="mailto:evenisse@apache.org">Emmanuel Venisse</a>
- * @version $Id$
- * @plexus.component role="com.opensymphony.xwork2.Action" role-hint="configuration"
  */
+@Component( role = com.opensymphony.xwork2.Action.class, hint = "configuration", instantiationStrategy = "per-lookup" )
 public class ConfigurationAction
     extends ContinuumActionSupport
     implements Preparable, SecureAction
 {
+    private static final Logger log = LoggerFactory.getLogger( ConfigurationAction.class );
+
     private String workingDirectory;
 
     private String buildOutputDirectory;
@@ -54,13 +55,23 @@ public class ConfigurationAction
     private String deploymentRepositoryDirectory;
 
     private String baseUrl;
-    
+
     private String releaseOutputDirectory;
 
     private int numberOfAllowedBuildsinParallel = 1;
+<<<<<<< HEAD
     
     private boolean requireReleaseOutput;
     
+=======
+
+    private boolean requireReleaseOutput;
+
+    private boolean distributedBuildEnabled;
+
+    private String sharedSecretPassword;
+
+>>>>>>> refs/remotes/apache/trunk
     public void prepare()
     {
         ConfigurationService configuration = getContinuum().getConfiguration();
@@ -69,18 +80,21 @@ public class ConfigurationAction
         if ( workingDirectoryFile != null )
         {
             workingDirectory = workingDirectoryFile.getAbsolutePath();
+            validateDir( "workingDirectory", workingDirectoryFile );
         }
 
         File buildOutputDirectoryFile = configuration.getBuildOutputDirectory();
         if ( buildOutputDirectoryFile != null )
         {
             buildOutputDirectory = buildOutputDirectoryFile.getAbsolutePath();
+            validateDir( "buildOutputDirectory", buildOutputDirectoryFile );
         }
 
         File deploymentRepositoryDirectoryFile = configuration.getDeploymentRepositoryDirectory();
         if ( deploymentRepositoryDirectoryFile != null )
         {
             deploymentRepositoryDirectory = deploymentRepositoryDirectoryFile.getAbsolutePath();
+            validateDir( "deploymentRepositoryDirectory", deploymentRepositoryDirectoryFile );
         }
 
         baseUrl = configuration.getUrl();
@@ -90,14 +104,16 @@ public class ConfigurationAction
             HttpServletRequest request = ServletActionContext.getRequest();
             baseUrl = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort() +
                 request.getContextPath();
-            getLogger().info( "baseUrl='" + baseUrl + "'" );
+            log.info( "baseUrl='" + baseUrl + "'" );
         }
 
         File releaseOutputDirectoryFile = configuration.getReleaseOutputDirectory();
         if ( releaseOutputDirectoryFile != null )
         {
             releaseOutputDirectory = releaseOutputDirectoryFile.getAbsolutePath();
+            validateDir( "releaseOutputDirectory", releaseOutputDirectoryFile );
         }
+<<<<<<< HEAD
         
         numberOfAllowedBuildsinParallel = configuration.getNumberOfBuildsInParallel();
         
@@ -106,8 +122,22 @@ public class ConfigurationAction
             numberOfAllowedBuildsinParallel = 1;
         }
                
+=======
+
+        numberOfAllowedBuildsinParallel = configuration.getNumberOfBuildsInParallel();
+
+        if ( numberOfAllowedBuildsinParallel == 0 )
+        {
+            numberOfAllowedBuildsinParallel = 1;
+        }
+
+>>>>>>> refs/remotes/apache/trunk
         String requireRelease = ServletActionContext.getRequest().getParameter( "requireReleaseOutput" );
-        setRequireReleaseOutput( new Boolean( requireRelease ) );
+        setRequireReleaseOutput( Boolean.valueOf( requireRelease ) );
+
+        distributedBuildEnabled = configuration.isDistributedBuildEnabled();
+
+        sharedSecretPassword = configuration.getSharedSecretPassword();
     }
 
     public String input()
@@ -116,32 +146,54 @@ public class ConfigurationAction
         {
             addActionError( getText( "configuration.releaseOutputDirectory.required" ) );
         }
+<<<<<<< HEAD
                 
         if( numberOfAllowedBuildsinParallel <= 0 )
         {
             addActionError( "configuration.numberOfBuildsInParallel.invalid" );
+=======
+
+        if ( numberOfAllowedBuildsinParallel <= 0 )
+        {
+            addActionError( getText( "configuration.numberOfBuildsInParallel.invalid" ) );
+>>>>>>> refs/remotes/apache/trunk
         }
-        
+
         return INPUT;
     }
 
     public String save()
-        throws ConfigurationStoringException, ContinuumStoreException, ContinuumConfigurationException
+        throws ConfigurationStoringException
     {
+<<<<<<< HEAD
         if( numberOfAllowedBuildsinParallel <= 0 )
         {
             addActionError( "Number of Allowed Builds in Parallel must be greater than zero." );
             return ERROR;
         }
         
+=======
+        if ( numberOfAllowedBuildsinParallel <= 0 )
+        {
+            addActionError( "Number of Allowed Builds in Parallel must be greater than zero." );
+            return INPUT;
+        }
+
+>>>>>>> refs/remotes/apache/trunk
         ConfigurationService configuration = getContinuum().getConfiguration();
 
         configuration.setWorkingDirectory( new File( workingDirectory ) );
 
         configuration.setBuildOutputDirectory( new File( buildOutputDirectory ) );
+<<<<<<< HEAD
         
         configuration.setNumberOfBuildsInParallel( numberOfAllowedBuildsinParallel );	
         
+=======
+
+        configuration.setNumberOfBuildsInParallel( numberOfAllowedBuildsinParallel );
+
+>>>>>>> refs/remotes/apache/trunk
         if ( StringUtils.isNotEmpty( deploymentRepositoryDirectory ) )
         {
             configuration.setDeploymentRepositoryDirectory( new File( deploymentRepositoryDirectory ) );
@@ -162,16 +214,48 @@ public class ConfigurationAction
         else if ( isRequireReleaseOutput() )
         {
             addActionError( getText( "configuration.releaseOutputDirectory.required" ) );
+<<<<<<< HEAD
             return ERROR;
+=======
+            return INPUT;
+>>>>>>> refs/remotes/apache/trunk
         }
         else
         {
             configuration.setReleaseOutputDirectory( null );
         }
 
-        configuration.store();
+        configuration.setDistributedBuildEnabled( distributedBuildEnabled );
+
+        configuration.setSharedSecretPassword( sharedSecretPassword );
+
+        try
+        {
+            configuration.store();
+        }
+        catch ( ContinuumConfigurationException cce )
+        {
+            log.error( "failed to save configuration", cce );
+            addActionError( getText( "configuration.save.failed" ) );
+            return INPUT;
+        }
 
         return SUCCESS;
+    }
+
+    private void validateDir( String fieldName, File dir )
+    {
+        if ( dir.exists() )
+        {
+            if ( !dir.isDirectory() )
+            {
+                addFieldError( fieldName, getText( "configuration.dir.notdir" ) );
+            }
+            if ( !dir.canWrite() )
+            {
+                addFieldError( fieldName, getText( "configuration.dir.notwritable" ) );
+            }
+        }
     }
 
     public String getWorkingDirectory()
@@ -238,11 +322,12 @@ public class ConfigurationAction
     {
         return requireReleaseOutput;
     }
-    
+
     public void setRequireReleaseOutput( boolean requireReleaseOutput )
     {
         this.requireReleaseOutput = requireReleaseOutput;
     }
+<<<<<<< HEAD
     
 	public int getNumberOfAllowedBuildsinParallel() 
 	{
@@ -253,4 +338,36 @@ public class ConfigurationAction
 	{
 	    this.numberOfAllowedBuildsinParallel = numberOfAllowedBuildsinParallel;
 	}
+=======
+
+    public int getNumberOfAllowedBuildsinParallel()
+    {
+        return numberOfAllowedBuildsinParallel;
+    }
+
+    public void setNumberOfAllowedBuildsinParallel( int numberOfAllowedBuildsinParallel )
+    {
+        this.numberOfAllowedBuildsinParallel = numberOfAllowedBuildsinParallel;
+    }
+
+    public boolean isDistributedBuildEnabled()
+    {
+        return distributedBuildEnabled;
+    }
+
+    public void setDistributedBuildEnabled( boolean distributedBuildEnabled )
+    {
+        this.distributedBuildEnabled = distributedBuildEnabled;
+    }
+
+    public void setSharedSecretPassword( String sharedSecretPassword )
+    {
+        this.sharedSecretPassword = sharedSecretPassword;
+    }
+
+    public String getSharedSecretPassword()
+    {
+        return sharedSecretPassword;
+    }
+>>>>>>> refs/remotes/apache/trunk
 }
